--- a/styles/libStyle.css
+++ b/styles/libStyle.css
@@ -22,7 +22,7 @@ form {
 }
 
 .right {
-    width: 500px;
+    min-width: 500px;
     border-radius: 20px;
     padding: 15px;
 }
@@ -37,10 +37,6 @@ th {
 
 tr {
     background-color: #f5f5f5;
-}
-
-td {
-    padding: 1px 8px;
 }
 
 tr:nth-child(even) {
