--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap');
+
+:root {
+    --primary-font: 'Poppins', sans-serif;
+    --title-font: 'Comfortaa', sans-serif;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -5,7 +13,8 @@
 }
 
 label, input, td, th, p {
-    font-size: 1.2em;
+    font-size: 1em;
+    font-family: var(--primary-font);
 }
 
 td {
@@ -18,6 +27,7 @@ td {
 }
 
 a {
+    font-family: var(--primary-font);
     color: black;
     text-decoration: none;
 }
@@ -29,13 +39,18 @@ input, button {
 }
 
 button {
-    font-size: 1em;
+    font-family: var(--primary-font);
+    font-size: 0.8em;
     padding: 2px 5px;
     cursor: pointer;
 }
 
 h1 {
     font-size: 1.8em;
+}
+
+h1, h2, h3 {
+    font-family: var(--title-font);
 }
 
 body {
